--- a/main.html
+++ b/main.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+	<img src="https://images.app.goo.gl/T6gnnESBXAbksN8D7" height=50px>
+	<h1>Richa</h1>
+	<a href="https://www.linkedin.com/in/richa-singh-170077112/">LinkedIn</a><br>
+	
+	<section id="skills">
+		XYZ
+	</section>
+	<section id="projects">
+		<ul>
+			<li>P1</li>
+			<li>P2</li>
+			<li>P3</li>
+		</ul>
+	</section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
